# engine

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat
.zed/: settings.json
assets/shaders/: triangle.vert.hlsl
cmake/: FindSDL3.cmake  FindSDL3_shadercross.cmake  Findspirv_cross_c_shared.cmake  build-SDL3-shadercross.cmake  build-wuffs.cmake  check-paths.cmake  engine-config.cmake.in  msvc-clang-ninja.toolchain.cmake  paths.cmake  submachine-config.cmake.in  windows-sdk.toolchain.cmake  windows-x86_64.toolchain.cmake  windows.toolchain.cmake
cmake/crosscompile/: windows-x86_64.toolchain.cmake
src/: entrypoint.c  main.c  sm_assert.h  sm_assets.c  sm_assets.h  sm_build_config.h.in  sm_entrypoint.c  sm_entrypoint.h  sm_gpu.c  sm_gpu.h  sm_ui.c  sm_ui.h  submachine.h.in
